# GEL_exc

./: Installing GLEW and FreeGLUT.doc  README.txt
GEL/: CMakeLists.txt
GEL/GEL_WIN/: GEL_WIN.sln  GEL_WIN.vcxproj  GEL_WIN.vcxproj.filters
GEL/src/CGLA/: CGLA.h
GEL/src/GLGraphics/: Console.h  GLViewController.cpp  ManifoldRenderer.cpp  ManifoldRenderer.h  QuatTrackBall.cpp
GEL/src/HMesh/: ItemID.h  Iterators.h  Manifold.cpp  Manifold.h  quadric_simplify.cpp
GEL/src/LinAlg/: LapackFunc.h
GEL_demos/: CMakeLists.txt
GEL_demos/Edge_Flipper/: CMakeLists.txt  data.txt  demo.vcxproj  demo.vcxproj.filters  flipper.cpp
GEL_demos/Mesh_Viewer/: CMakeLists.txt  bunny-little.x3d  demo.sln  demo.vcxproj  demo.vcxproj.filters  gel_demo.cpp  mesh1.x3d  mesh2.x3d
GEL_demos/Surface_Reconstruction/: CMakeLists.txt  demo.vcxproj  demo.vcxproj.filters  rbfdemo.cpp
GEL_demos/cmake/: common.cmake
